--- a/iaa011-vc-trabalho.ipynb
+++ b/iaa011-vc-trabalho.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 239,
    "id": "1b05429e-0ec0-42d3-9ed6-a5bb42b052df",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 238,
    "id": "085382c6-12a2-49ee-9baa-1b9d6edfeb1e",
    "metadata": {},
    "outputs": [
@@ -407,10 +407,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LibSVM]Modelo SVM LBP treinado\n",
-      "Número de vetores de suporte por classe: [146 142 150  79]\n",
-      "CPU times: total: 15.6 ms\n",
-      "Wall time: 21.6 ms\n"
+      "[LibSVM]Modelo SVM treinado\n",
+      "Número de vetores de suporte por classe: [139 145 143 136]\n",
+      "CPU times: total: 6min 1s\n",
+      "Wall time: 24.3 s\n"
      ]
     }
    ],
@@ -421,7 +421,7 @@
     "\n",
     "# Cria e treina o classificador SVM\n",
     "def svm(X, y):    \n",
-    "    svm = SVC(kernel='rbf', gamma='scale', C=1, verbose=True, random_state=42)\n",
+    "    svm = SVC(kernel='rbf', gamma='scale', C=1, verbose=True, random_state=42, class_weight='balanced')\n",
     "    svm.fit(X, y)    \n",
     "    print(\"Modelo SVM treinado\")\n",
     "    return svm\n",
@@ -897,8 +897,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4f898d0-6287-40be-b506-337c48e92238",
+   "metadata": {},
+   "source": [
+    "### 7. Calcule as métricas de Sensibilidade, Especificidade e F1-Score com base em suas matrizes de confusão."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 235,
    "id": "2e4487e7-a025-4019-9354-69feb4f1df8d",
    "metadata": {},
    "outputs": [
@@ -911,6 +919,48 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Métricas SVM LBP\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.200     0.010     0.019       101\n",
+      "           1      0.384     0.811     0.521        90\n",
+      "           2      0.526     0.456     0.488        90\n",
+      "           3      0.908     0.989     0.947        90\n",
+      "\n",
+      "    accuracy                          0.550       371\n",
+      "   macro avg      0.505     0.566     0.494       371\n",
+      "weighted avg      0.495     0.550     0.480       371\n",
+      "\n",
+      "Métricas Randon Forest LBP\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.571     0.475     0.519       101\n",
+      "           1      0.390     0.456     0.421        90\n",
+      "           2      0.429     0.467     0.447        90\n",
+      "           3      0.952     0.889     0.920        90\n",
+      "\n",
+      "    accuracy                          0.569       371\n",
+      "   macro avg      0.586     0.572     0.576       371\n",
+      "weighted avg      0.585     0.569     0.575       371\n",
+      "\n",
+      "Métricas Randon RNA LBP\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.500     0.109     0.179       101\n",
+      "           1      0.405     0.778     0.532        90\n",
+      "           2      0.632     0.533     0.578        90\n",
+      "           3      0.890     0.989     0.937        90\n",
+      "\n",
+      "    accuracy                          0.588       371\n",
+      "   macro avg      0.607     0.602     0.557       371\n",
+      "weighted avg      0.603     0.588     0.545       371\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -918,7 +968,6 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import accuracy_score\n",
-    "\n",
     "\n",
     "def plot_heatmap(y_true, y_pred, class_names, ax, title):\n",
     "    cm = confusion_matrix(y_true, y_pred)\n",
@@ -936,7 +985,7 @@
     "    ax.set_title(title, fontsize=16)\n",
     "    ax.set_xticklabels(ax.get_xticklabels(), rotation=45, ha=\"right\")\n",
     "    ax.set_ylabel('True Label', fontsize=12)\n",
-    "    ax.set_xlabel('Predicted Label', fontsize=12)\n",
+    "    ax.set_xlabel('Predicted Label', fontsize=12)    \n",
     "\n",
     "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(20, 10))\n",
     "\n",
@@ -947,12 +996,19 @@
     "fig.suptitle(\"Comparação das Matrizes de Confusão - modelos treinados com LBP\", fontsize=24)\n",
     "fig.tight_layout()\n",
     "fig.subplots_adjust(top=1.2)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(\"Métricas SVM LBP\")\n",
+    "print(classification_report(y_test, y_pred_svm_lbp, digits=3))\n",
+    "print(\"Métricas Randon Forest LBP\")\n",
+    "print(classification_report(y_test, y_pred_rf_lbp, digits=3))\n",
+    "print(\"Métricas Randon RNA LBP\")\n",
+    "print(classification_report(y_test, y_pred_rna_lbp, digits=3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 237,
    "id": "90a7aa07-e710-4470-8fba-014660d7406c",
    "metadata": {},
    "outputs": [
@@ -965,6 +1021,48 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Métricas SVM VGG\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.943     0.990     0.966       101\n",
+      "           1      0.796     0.478     0.597        90\n",
+      "           2      0.627     0.767     0.690        90\n",
+      "           3      0.891     1.000     0.942        90\n",
+      "\n",
+      "    accuracy                          0.814       371\n",
+      "   macro avg      0.815     0.809     0.799       371\n",
+      "weighted avg      0.818     0.814     0.804       371\n",
+      "\n",
+      "Métricas Randon Forest VGG\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.783     1.000     0.878       101\n",
+      "           1      0.540     0.300     0.386        90\n",
+      "           2      0.640     0.711     0.674        90\n",
+      "           3      0.967     0.989     0.978        90\n",
+      "\n",
+      "    accuracy                          0.757       371\n",
+      "   macro avg      0.733     0.750     0.729       371\n",
+      "weighted avg      0.734     0.757     0.733       371\n",
+      "\n",
+      "Métricas Randon RNA VGG\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.901     0.634     0.744       101\n",
+      "           1      0.148     0.089     0.111        90\n",
+      "           2      0.280     0.511     0.362        90\n",
+      "           3      1.000     0.911     0.953        90\n",
+      "\n",
+      "    accuracy                          0.539       371\n",
+      "   macro avg      0.583     0.536     0.543       371\n",
+      "weighted avg      0.592     0.539     0.549       371\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -977,7 +1075,30 @@
     "fig.suptitle(\"Comparação das Matrizes de Confusão - modelos treinados com VGG\", fontsize=24)\n",
     "fig.tight_layout()\n",
     "fig.subplots_adjust(top=1.2)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(\"Métricas SVM VGG\")\n",
+    "print(classification_report(y_test, y_pred_svm_vgg, digits=3))\n",
+    "print(\"Métricas Randon Forest VGG\")\n",
+    "print(classification_report(y_test, y_pred_rf_vgg, digits=3))\n",
+    "print(\"Métricas Randon RNA VGG\")\n",
+    "print(classification_report(y_test, y_pred_rna_vgg, digits=3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "923f0ae4-ea0a-40fb-ae98-7083f1b80d3f",
+   "metadata": {},
+   "source": [
+    "### 8. Indique qual modelo dá o melhor o resultado e a métrica utilizada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8314c1ed-b6f2-4613-a145-24fa5b0d5860",
+   "metadata": {},
+   "source": [
+    "O melhor modelo é o **SVM** usando **features VGG**, pois apresenta a maior **F1 ponderada (0.804)** e também a maior **acurácia (0.814)**entre todos os modelos testados."
    ]
   },
   {
