--- a/iaa011-vc-trabalho.ipynb
+++ b/iaa011-vc-trabalho.ipynb
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 263,
    "id": "90a7aa07-e710-4470-8fba-014660d7406c",
    "metadata": {},
    "outputs": [
@@ -1082,11 +1082,11 @@
     "plt.show()\n",
     "\n",
     "print(\"Métricas SVM VGG\")\n",
-    "print(classification_report(y_test, y_pred_svm_vgg, digits=3))\n",
+    "print(classification_report(y_vgg_test, y_pred_svm_vgg, digits=3))\n",
     "print(\"Métricas Randon Forest VGG\")\n",
-    "print(classification_report(y_test, y_pred_rf_vgg, digits=3))\n",
+    "print(classification_report(y_vgg_test, y_pred_rf_vgg, digits=3))\n",
     "print(\"Métricas Randon RNA VGG\")\n",
-    "print(classification_report(y_test, y_pred_rna_vgg, digits=3))"
+    "print(classification_report(y_vgg_test, y_pred_rna_vgg, digits=3))"
    ]
   },
   {
